Add render to buffer method

--- a/shadertoy/CMakeLists.txt
+++ b/shadertoy/CMakeLists.txt
@@ -30,7 +30,8 @@ elseif(CMAKE_COMPILER_IS_GNUCXX)
 endif()
 #target_include_directories(shadertoy-headless PRIVATE ${CMAKE_CURRENT_LIST_DIR}/thirdparty/hello_imgui/src ${IMGUI_SRC_DIR} ${CMAKE_CURRENT_LIST_DIR}/thirdparty/)
 target_link_libraries(shadertoy-headless PRIVATE fmt::fmt GLEW::GLEW Microsoft.GSL::GSL magic_enum::magic_enum httplib::httplib OpenSSL::SSL OpenSSL::Crypto)
-target_include_directories(shadertoy-headless PRIVATE ${Stb_INCLUDE_DIR} ${CPP_BASE64_INCLUDE_DIRS} ${CMAKE_CURRENT_SOURCE_DIR} ${CMAKE_CURRENT_SOURCE_DIR}/NodeEditor)
+target_include_directories(shadertoy-headless PRIVATE ${Stb_INCLUDE_DIR} ${CPP_BASE64_INCLUDE_DIRS} PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/..)
+set_target_properties(shadertoy-headless PROPERTIES POSITION_INDEPENDENT_CODE ON)
 
 if(APPLE)
 	find_library(AppleSecurityLib Security)
@@ -46,12 +47,12 @@ if(APPLE)
 #	)
 endif(APPLE)
 
-install(FILES ${CMAKE_SOURCE_DIR}/LICENSE DESTINATION .)
-install(DIRECTORY ${CMAKE_SOURCE_DIR}/licenses DESTINATION .)
-install(DIRECTORY ${CMAKE_SOURCE_DIR}/examples DESTINATION .)
+install(FILES ${CMAKE_CURRENT_SOURCE_DIR}/../LICENSE DESTINATION .)
+install(DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/../licenses DESTINATION .)
+#install(DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/../examples DESTINATION .)
 install(TARGETS shadertoy-headless DESTINATION .)
-install(FILES ${CMAKE_CURRENT_SOURCE_DIR}/*.hpp DESTINATION .)
-install(FILES ${CMAKE_CURRENT_SOURCE_DIR}/NodeEditor/*.hpp DESTINATION NodeEditor)
+#install(FILES ${CMAKE_CURRENT_SOURCE_DIR}/*.hpp DESTINATION shadertoy)
+#install(FILES ${CMAKE_CURRENT_SOURCE_DIR}/NodeEditor/*.hpp DESTINATION shadertoy/NodeEditor)
 
 # if(APPLE)
 # 	include(InstallRequiredSystemLibraries)
