--- a/shadertoy/CMakeLists.txt
+++ b/shadertoy/CMakeLists.txt
@@ -31,6 +31,7 @@ endif()
 #target_include_directories(shadertoy-headless PRIVATE ${CMAKE_CURRENT_LIST_DIR}/thirdparty/hello_imgui/src ${IMGUI_SRC_DIR} ${CMAKE_CURRENT_LIST_DIR}/thirdparty/)
 target_link_libraries(shadertoy-headless PRIVATE fmt::fmt GLEW::GLEW Microsoft.GSL::GSL magic_enum::magic_enum httplib::httplib OpenSSL::SSL OpenSSL::Crypto)
 target_include_directories(shadertoy-headless PRIVATE ${Stb_INCLUDE_DIR} ${CPP_BASE64_INCLUDE_DIRS} PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/..)
+target_compile_features(shadertoy-headless PRIVATE cxx_std_23)
 set_target_properties(shadertoy-headless PROPERTIES POSITION_INDEPENDENT_CODE ON)
 
 if(APPLE)
