--- a/shadertoy/CMakeLists.txt
+++ b/shadertoy/CMakeLists.txt
@@ -48,9 +48,11 @@ elseif(CMAKE_COMPILER_IS_GNUCXX)
 	set_source_files_properties(${SHADERTOY_SRC} PROPERTIES COMPILE_FLAGS "-Wall -Wextra -Werror -Wconversion -Wshadow=compatible-local -Wno-psabi -Wno-array-bounds -Wno-unused-parameter")
 endif()
 
-find_package(nlohmann_json 3.2.0 REQUIRED)
-find_package(hello-imgui CONFIG REQUIRED)
-target_link_libraries(shadertoy-headless PRIVATE hello-imgui::hello_imgui nlohmann_json::nlohmann_json)
+if(NOT ENABLE_DEBUG_WINDOW)
+    find_package(nlohmann_json 3.2.0 REQUIRED)
+    find_package(hello-imgui CONFIG REQUIRED)
+    target_link_libraries(shadertoy-headless PRIVATE hello-imgui::hello_imgui nlohmann_json::nlohmann_json)
+endif()
 
 #target_include_directories(shadertoy-headless PRIVATE ${CMAKE_CURRENT_LIST_DIR}/thirdparty/hello_imgui/src ${IMGUI_SRC_DIR} ${CMAKE_CURRENT_LIST_DIR}/thirdparty/)
 target_link_libraries(shadertoy-headless PRIVATE fmt::fmt GLEW::GLEW Microsoft.GSL::GSL magic_enum::magic_enum httplib::httplib OpenSSL::SSL OpenSSL::Crypto)
