--- a/shadertoy/CMakeLists.txt
+++ b/shadertoy/CMakeLists.txt
@@ -46,7 +46,7 @@ else()
     find_package(nlohmann_json 3.2.0 REQUIRED)
 
     if(NOT TARGET hello-imgui::hello_imgui)
-        find_package(hello_imgui CONFIG REQUIRED)
+        find_package(hello-imgui CONFIG REQUIRED)
     endif()
 
     target_link_libraries(shadertoy-headless PRIVATE hello-imgui::hello_imgui nlohmann_json::nlohmann_json)
